--- a/src/tags/components/stack/index.css
+++ b/src/tags/components/stack/index.css
@@ -8,7 +8,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 999999;
   transform: translateX(-100%);
   transition: transform 0.15s;
   font-family: Helvetica, sans-serif;
